<resources>
    <!-- main activity -->
    <string name="app_name">PhoneTime</string>
    <string name="block_button">Blocked apps</string>
    <string name="stats_title">Stats</string>
    <string name="time_frame_day">Today</string>
    <string name="time_frame_week">This week</string>
    <string name="time_frame_month">This month</string>

    <string name="pie_chart_fragment">Pie-chart fragment</string>
    <string name="list_fragment">List fragment</string>
    <string name="trends_fragment">Trends fragment</string>

    <string name="title_activity_blocked_apps">Blocked Apps</string>
    <string name="app_logo">App Logo</string>
    <string name="delete_rule">Delete rule</string>
    <string name="edit_rule">Edit rule</string>
    <string name="title_activity_block_an_app">Block an app</string>
    <string name="block_opt_between">Between</string>
    <string name="block_opt_after">After using for</string>
    <string name="and">and</string>
    <string name="choose_an_app">Choose an app:</string>

    <string-array name="time_units">
        <item>min</item>
        <item>hours</item>
    </string-array>

    <string-array name="time_frames_block">
        <item>day</item>
        <item>week</item>
    </string-array>

    <string name="no_rules_yet">No rules are set yet. Click the + button to create a new rule.</string>
    <string name="stats_trends">Trends</string>
    <string name="stats_list">List</string>
    <string name="stats_pie">Pie chart</string>
    <string name="a">a</string>
    <string name="min_used">%d min.</string>
    <string name="sec_used">%d sec.</string>
    <string name="radio_button_symbol">Radio button symbol</string>
    <string name="colon">:</string>
    <string name="loading">Loading&#8230;</string> <!-- &#8230; = "..." -->
    <string name="no_data">No data</string>
</resources>
