<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:id="@+id/app_logo"
        android:src="@drawable/facebook_logo"
        android:contentDescription="@string/app_logo"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:layout_gravity="center"
        android:id="@+id/app_name"
        android:text="Facebook"
        android:gravity="start"
        android:textAlignment="textStart"
        android:textSize="36sp"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/delete_rule"
            android:src="@drawable/ic_close_white_18dp"
            android:contentDescription="@string/delete_rule" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/edit_rule"
            android:src="@drawable/ic_edit_white_18dp"
            android:contentDescription="@string/edit_rule" />

    </LinearLayout>

</LinearLayout>